- Cleanup rightmenu hiding / collapsed mode to use more classes/css and less logic in templates # Redo parts of this to fix cache issue that this caused
git-svn-id: file:///home/patrick.allaert/svn-git/ezp-repo/ezpublish/trunk@24612 a01eee8c-daba-0310-acae-fa49f3023285

--- a/design/admin2/stylesheets/pagelayout.css
+++ b/design/admin2/stylesheets/pagelayout.css
@@ -168,9 +168,6 @@ div.tab-content
   overflow-x: hidden;
 }
 
-div#page.collapsed-rightmenu div#rightmenu   { width: 1.1em; }
-div#page.collapsed-rightmenu div#maincontent { margin-right: 1.1em; }
-
 div#page.hide-rightmenu div#rightmenu   { display: none; }
 div#page.hide-rightmenu div#maincontent { margin-right: 0; }
 
